# project-UoL

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  Scoreboard.csv  noxfile.py  pyproject.toml
.github/workflows/: actions.yml
Pokemon_Guessing_Game/: Scoreboard.csv  app.py
tests/: test_leaderboard.py  test_placeholder.py
